# sheet2linkml

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: main.yaml  pytest.yaml
sheet2linkml/: cli.py  sheet2linkml.py
sheet2linkml/source/gsheetmodel/: datatype.py  entity.py  enum.py  gsheetmodel.py  mappings.py
sheet2linkml/terminologies/tccm/: api.py
tests/: test_command_line.py  test_tccm_api.py
tests/testing-schema-on-gsheet/: 1HpsF12vl_CeIzV2TEtANeysnh7cy6YOUDdv6fMXT00I.yaml
